Fix issue with banding in the gradient map filter

BUG:463585

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1698>
(cherry picked from commit b9e615b1ff944c86b160232d9563570b511de3d1)